--- a/home page/index.html
+++ b/home page/index.html
@@ -7,68 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>theraply</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
 <body>
     <div>
         <header>
+            <div id="buttons" class="align-top pull-right">
+                <button id="login" class="btn btn-sm" type="button">Login</button>
+                <button id="registration" class="btn btn-sm" type="button">Registration</button>
+            </div>
             <h1>theraply</h1>
         </header>
     </div>
     <div>
-        <nav class="navbar">
-            <a class="home" href="home">Home</a>
-            <a class="process" href="process">Process</a>
-            <a class="search" href="search">Search</a>
-            <a class="profile" href="profile">Profile</a>
+        <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <p>
+                <a class="home" href="home">Home |</a>
+                <a class="process" href="process">Process |</a>
+                <a class="search" href="search">Search |</a>
+                <a class="profile" href="profile">Profile |</a>
+            </p>
         </nav>
     </div>
-    <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, laboriosam vitae doloribus quidem magni harum
-            odio consectetur, rerum voluptatem praesentium, exercitationem et culpa quo quisquam aut ipsa dolorem ad
-            rem?
-            Laboriosam delectus temporibus consequuntur ut perspiciatis quisquam sapiente repellendus cum ab recusandae
-            neque eligendi exercitationem quo labore vitae quas tempore commodi quam enim fugit fugiat, laudantium
-            aliquid cupiditate possimus? Qui.
-            Eius, odit? Deleniti, velit voluptatibus saepe voluptates assumenda voluptatum est enim ducimus quisquam
-            amet rem quae necessitatibus. Tempora adipisci, ex non ipsam animi, ducimus dolore quam assumenda, at
-            numquam porro.</p>
+    <section class="mainbody">
+        <img src="https://images.unsplash.com/photo-1541976844346-f18aeac57b06?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8dGhlcmFweXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+            alt="two hands reaching out for each other">
+        <section>
+            <h2>Lorem Ipsum</h2>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, laboriosam vitae doloribus
+                quidem
+                magni harum
+                odio consectetur, rerum voluptatem praesentium, exercitationem et culpa quo quisquam aut ipsa dolorem ad
+                rem?
+                Laboriosam delectus temporibus consequuntur ut perspiciatis quisquam sapiente repellendus cum ab
+                recusandae
+                neque eligendi exercitationem quo labore vitae quas tempore commodi quam enim fugit fugiat, laudantium
+                aliquid cupiditate possimus? Qui.
+                Eius, odit? Deleniti, velit voluptatibus saepe voluptates assumenda voluptatum est enim ducimus quisquam
+                amet rem quae necessitatibus. Tempora adipisci, ex non ipsam animi, ducimus dolore quam assumenda, at
+                numquam porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis tenetur, sint
+                facilis natus sit veritatis deleniti perferendis esse iure nobis assumenda, eum impedit non! Numquam
+                reiciendis pariatur nemo earum facere?
+                Velit nostrum tempore quas. Quidem enim distinctio odit quos totam pariatur explicabo iure quibusdam,
+                accusamus, iste dolor maiores magnam aliquid rerum repellendus laboriosam consequuntur ipsa perferendis
+                possimus quod, odio dolores!
+                Sint aliquam ea, beatae, molestiae quasi aut assumenda id quae dolor aliquid, iure voluptatem tempora
+                placeat eum labore porro esse voluptate fugiat alias modi necessitatibus! Error necessitatibus
+                perferendis adipisci ullam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos rerum explicabo
+                cum. Veniam, exercitationem quia delectus rem cum omnis harum voluptate, nulla nesciunt aperiam tenetur
+                tempore qui magni assumenda earum.</p>
+        </section>
     </section>
 
+
     <section class="footer-theraply">
-
-        <footer>
-            <h3>theraply</h3>
-            <div class="footer-left">
-                <p class="footer-pages">
-                    <a href="home">Home</a>
-                    <a href="process">Process</a>
-                    <a href="Search">Search</a>
-                    <a href="profile">Profile</a>
-                    <a href="contact">Contact</a>
-                </p>
+        <hr>
+        <footer class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <div class="footer-pages">
+                <a href="theraply">theraply</a>
+                <a href="techlabs">Berlin TechLabs</a>
+                <a href="contact">Contact</a>
+                <a href="about">About us</a>
+                <a href="profile">Profile</a>
             </div>
-
-            <div class="footer-center">
-                <div>
-                    <i class="address"></i>
-                    <p><span>Example Street 123</span> Berlin, Germany</p>
-                    <i class="phone"></i>
-                    <p>0123 45678910</p>
-                    <i class="mail"></i>
-                    <p><a href="mailto:berlin@theraply.com">berlin@theraply.com</a></p>
-                </div>
-            </div>
-
-            <div class="footer-right">
-                <p class="footer-about">
-                    <span>About theraply</span>
-                    Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor
-                    lacus
-                    vehicula sit amet.
-                </p>
-            </div>
-
         </footer>
     </section>
 
